2007-12-21  Tom Tromey  <tromey@redhat.com>

	* c-decl.c (lookup_tag): Only record anti-dependency at file
	scope.
	(pushdecl): Do nothing if no external scope available.

2007-12-20  Tom Tromey  <tromey@redhat.com>

	* c-parser.c (c_parser_update_checksum): Fix logic.

2007-12-20  Tom Tromey  <tromey@redhat.com>

	* dwarf2out.c (macro_obstack): New global.
	(struct macro_entry): New.
	(first_macro_entry, last_macro_entry): New globals.
	(add_macro_entry): New function.
	(emit_macro_entries): Likewise.
	(dwarf2out_start_source_file): Use add_macro_entry.
	(dwarf2out_end_source_file): Likewise.
	(dwarf2out_define): Likewise.
	(dwarf2out_undef): Likewise.
	(dwarf2out_init): Clear macro_obstack if needed.
	(dwarf2out_finish): Call emit_macro_entries.

2007-12-20  Tom Tromey  <tromey@redhat.com>

	* toplev.c (clear_src_pwd): Add cast.
	* c-parser.c (c_parser_lookup_callback): Check against
	error_mark_node.
	(c_parser_update_checksum): Likewise.
	(c_parser_bind_callback): Likewise.
	* c-typeck.c (really_start_incremental_init): Check against
	error_mark_node.
	* tree.c (make_node_stat): Only allow one error mark.  Remove dead
	code.

2007-12-17  Tom Tromey  <tromey@redhat.com>

	* c-decl.c (c_write_global_declarations): Return early if making a
	PCH file.

2007-12-17  Tom Tromey  <tromey@redhat.com>

	* gimplify.c (gimplify_function_tree): Use
	server_assert_code_generation.
	* server.h (server_assert_code_generation): Declare.
	* server.c (enum server_state): New.
	(current_server_state): New global.
	(server_main_loop): Set it.
	(server_start_back_end): Likewise.
	(server_assert_code_generation): New function.
	* c-pretty-print.c (pp_c_expression): Handle VIEW_CONVERT_EXPR.
	(pp_c_cast_expression): Likewise.
	* c-typeck.c (really_start_incremental_init): Handle error mark
	nodes.
	(build_external_ref): Wrap variables in VIEW_CONVERT_EXPR.
	* c-parser.c (c_parser_lookup_callback): Handle error mark nodes.
	* c-decl.c (check_bitfield_type_and_width): Handle enum type